# monorepo

./: .dependency-cruiser.cjs  .dockerignore  .env.default  .fallowrc.jsonc  .gitattributes  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .license-checker.json  .lintstagedrc.js  .lintstagedrc.ts  .markdownlint-cli2.jsonc  .markdownlintignore  .markdownlintrc.json  .ncurc.cjs  .ncurc.json  .nxignore  .oxfmtrc.json  .oxlintrc.jsonc  .prettierignore  .prettierrc.js  .prettierrc.ts  .releaserc.json  .sqlfluffignore  .stylelintrc.cjs  .syncpackrc.cjs  .trivyignore  .vulture_whitelist.py  .yamllint  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Modelfile.local-coding-model  README.md  SECURITY.md  biome.jsonc  commitlint.config.ts  conventional.config.cjs  (+30 more)
applications/affirmations/: .coverage  .gitignore  .vulture_whitelist.py  AGENTS.md  README.md  package.json  project.json  pyproject.toml  searxng.settings.yml
applications/affirmations/config/searxng/: settings.yml
applications/affirmations/notebooks/: affirmations.ipynb  example-affirmation-generation.ipynb
applications/affirmations/output/lenormand/: 1-rider.md  10-scythe.md  11-whip.md  12-birds.md  13-child.md  14-fox.md  15-bear.md  16-stars.md  17-stork.md  18-dog.md  19-tower.md  2-clover.md  20-garden.md  21-mountain.md  22-crossroads.md  23-mice.md  24-heart.md  25-ring.md  26-book.md  27-letter.md  28-man.md  29-gentleman.md  3-ship.md  30-woman.md  31-lady.md  32-lily.md  33-sun.md  34-moon.md  35-key.md  36-fish.md  37-anchor.md  38-cross.md  4-house.md  5-tree.md  6-clouds.md  7-snake.md  8-coffin.md  9-bouquet.md
applications/affirmations/output/tarot/: death.md  justice.md  strength.md  temperance.md  the-chariot.md  the-devil.md  the-emperor.md  the-empress.md  the-fool.md  the-hanged-man.md  the-hermit.md  the-hierophant.md  the-high-priestess.md  the-lovers.md  the-magician.md  the-tower.md  wheel-of-fortune.md
applications/affirmations/output/tarot-card/: 0-the-fool.md  1-the-magician.md  10-wheel-of-fortune.md  11-justice.md  12-the-hanged-man.md  13-death.md  14-temperance.md  15-the-devil.md  16-the-tower.md  17-the-star.md  18-the-moon.md  19-the-sun.md  2-the-high-priestess.md  20-judgment.md  21-the-world.md  22-the-ace-of-wands.md  23-the-two-of-wands.md  24-the-three-of-wands.md  25-the-four-of-wands.md  26-the-five-of-wands.md  27-the-six-of-wands.md  28-the-seven-of-wands.md  29-the-eight-of-wands.md  3-the-empress.md  30-the-nine-of-wands.md  31-the-ten-of-wands.md  32-the-page-of-wands.md  33-the-knight-of-wands.md  34-the-queen-of-wands.md  35-the-king-of-wands.md  36-the-ace-of-cups.md  37-the-two-of-cups.md  38-the-three-of-cups.md  39-the-four-of-cups.md  4-the-emperor.md  40-the-five-of-cups.md  41-the-six-of-cups.md  42-the-seven-of-cups.md  43-the-eight-of-cups.md  44-the-nine-of-cups.md  (+38 more)
applications/affirmations/src/: __init__.py  affirmations.ipynb  agent.py  chains.py  grammars.py  llm.py  models.py  output.py  practices.py  prices.ipynb  prompts.py  research.py  semantics.ipynb  subjects.py  tools.py
applications/affirmations/src/notebooks/: affirmations.ipynb
applications/affirmations/testing/: __init__.py  test_agent_unit.py  test_chains_unit.py  test_grammars.py  test_models.py  test_models_unit.py  test_output.py  test_output_unit.py  test_practices_unit.py  test_prompts.py  test_research_unit.py  test_subjects.py  test_tools_unit.py
configuration/: .gitleaksignore  .markdownlint-cli2.jsonc  .oxfmtignore  .oxlintignore  .prettierignore  commitlint.config.ts  conventional.config.cjs  cspell.config.yaml  dependency-cruiser.cjs  eslint.config.base.ts  eslint.config.ts  fallow-duplicates-baseline.json  fallow.config.jsonc  fallow.config.mjs  gitleaks.toml  knip.config.ts  lint-staged.config.ts  oxfmt.config.ts  oxlint.config.ts  prettier.config.ts  project-structure.json  pyproject.toml  squawk.toml  stylelint.config.cjs  syncpack.config.cjs  tsconfig.base.json  tsconfig.json  vitest.config.ts  yamllint.yaml
configuration/.cspell/: affirmations.txt  ai.txt  astronomy.txt  ics.txt  infrastructure.txt  lexico.txt  nasa-horizons.txt  python.txt  tooling.txt
configuration/.husky/: commit-msg  pre-commit  pre-push
configuration/types/eslint-plugin-better-max-params/: index.d.ts
tools/code-generator/: .gitignore  AGENTS.md  README.md  eslint.config.ts  generators.json  package.json  project.json  pyproject.toml  quickstart.sh  tsconfig.json  vitest.config.ts
tools/code-generator/src/: generate-files.ts  name-variables.ts  name-variables.unit.test.ts  utilities.ts  utilities.unit.test.ts
tools/code-generator/src/conformance/: conformance.integration.test.ts  json-validator.ts  name_variables.py  test_conformance.py  types.ts  typescript-validator.ts
tools/code-generator/src/validators/: abstract-syntax-tree.ts  abstract-syntax-tree.unit.test.ts  comments.ts  comments.unit.test.ts  conformance.integration.test.ts  conformance.ts  conformance.unit.test.ts  constants.ts  markdown-validator.ts  nodes.ts  nodes.unit.test.ts  test_conformance.py  types.ts  validator.py  validator.ts  validator.unit.test.ts
tools/code-generator/testing/: test_conformance.py
tools/conformance/: .env.default  AGENTS.md  README.md  eslint.config.ts  generators.json  package.json  project.json  pyproject.toml  tsconfig.json  vitest.config.ts
tools/conformance/src/: conformance.integration.test.ts  conformance.module.ts  conformance.test.py  conformance.test.ts  constants.ts  main.end-to-end.test.ts  main.module.ts  main.ts  main.unit.test.ts  repl.ts  repl.unit.test.ts  types.ts  utilities.ts  utilities.unit.test.ts
tools/conformance/src/generators/: conformance-instances.ts
tools/conformance/src/modules/: app.module.ts  generator-utilities.unit.test.ts  module-constants.unit.test.ts  module-wiring.unit.test.ts
tools/conformance/src/validators/: types.ts
tools/conformance/testing/: setup.ts  test_json_validator.unit.py  test_markdown_validator.unit.py  test_notebook_validator.unit.py  test_python_validator.unit.py  test_text_validator.unit.py
(+3975 files in other folders)
