# Root pyproject.toml — shared Python tool configuration and workspace-level dev tools.
# Mirrors tsconfig.base.json / eslint.config.base.ts pattern.
#
# Python projects extend this via [tool.ruff] extend = "../../configuration/pyproject.toml"

[project]
name = "monorepo"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["yamllint>=1.35"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportMissingModuleSource = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownReturnType = "none"
reportUnusedParameter = "none"

[tool.pytest.ini_options]
markers = [
  "unit: fast unit tests with mocked I/O",
  "integration: integration tests requiring real services",
]
