# Root pyproject.toml — shared Python tool configuration and workspace-level dev tools.
# Mirrors tsconfig.base.json / eslint.config.base.ts pattern.
#
# Python projects extend this via [tool.ruff] extend = "../../configuration/pyproject.toml"

[project]
name = "monorepo"
version = "0.0.0"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = ["sqlfluff>=3.0", "yamllint>=1.35"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportMissingModuleSource = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportUnknownParameterType = "none"
reportUnknownReturnType = "none"
reportUnusedParameter = "none"

[tool.pytest.ini_options]
markers = [
  "unit: fast unit tests with mocked I/O",
  "integration: integration tests requiring real services",
]

[tool.sqlfluff.core]
dialect = "postgres"
templater = "raw"
indent_unit = "space"
indent_width = 2
max_line_length = 120
# PostgreSQL and Supabase use quoted identifiers with special chars in policy/function names
exclude_rules = ["RF05"]

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.rules.capitalisation.identifiers]
extended_capitalisation_policy = "lower"
