[project]
name = "affirmations"
version = "0.1.0"
description = "LangChain + LangGraph affirmation generation for spiritual practices via local Ollama"
requires-python = ">=3.11"
dependencies = [
  "langchain>=1.2",
  "langchain-ollama>=1.0",
  "langchain-community>=0.4",
  "langgraph>=0.3",
  "pydantic>=2.0",
  "jupyter>=1.1",
  "ipykernel>=6.29",
  "wikipedia>=1.4",
  "trafilatura>=2.0",
  "inflect>=7.5.0",
  "pandas>=2.0",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.9.4",
  "nbstripout>=0.8",
  "pyright>=1.1",
  "pytest>=8.0",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "ty>=0.0.28",
  "types-requests>=2.32",
  "vulture>=2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
reproducible = true

[tool.ruff]
# Extend base config from root pyproject.toml (mirrors tsconfig.base.json pattern)
extend = "../../pyproject.toml"
exclude = ["notebooks/**", ".vulture_whitelist.py"]

[tool.pyright]
# Venv settings and LangChain/LangGraph suppressions are project-specific
# Base config (pythonVersion, typeCheckingMode) is in root pyproject.toml
venvPath = "."
venv = ".venv"
# LangChain/LangGraph packages don't ship complete type stubs; suppress false positives
reportMissingTypeStubs = "none"
reportMissingModuleSource = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnknownLambdaType = "none"
reportUnknownArgumentType = "none"
reportDeprecated = "none"

[tool.ty.environment]
python-version = "3.11"
root = ["./src"]

[tool.ty.rules]
# LangGraph TypedDict subclasses trigger false-positive bound violations — StateT
# requires TypedDictLikeV1|DataclassLike but LangGraph accepts TypedDict at runtime
invalid-argument-type = "ignore"

[tool.bandit]
exclude_dirs = ["testing", "output", "notebooks"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["testing"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
  "unit: fast unit tests with mocked I/O",
  "integration: integration tests requiring real services",
]
