[project]
name = "code-generator"
version = "0.1.0"
description = "Nx code generator tooling — Python conformance validator"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
  "chevron>=0.14.0",
  "libcst>=1.7.0",
  "mistletoe>=1.4.0",
  "pytest>=8.0",
  "pytest-cov>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/validators", "src"]
reproducible = true

[tool.pytest.ini_options]
testpaths = ["src/validators"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
