[project]
name = "conformance"
version = "0.1.0"
description = "Python conformance validators for generator template validation"
requires-python = ">=3.14"
dependencies = ["chevron>=0.14", "mistletoe>=1.4"]

[dependency-groups]
dev = [
  "pyright>=1.1",
  "pytest>=9.0.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
  "ty>=0.0.28",
]

[tool.ruff]
extend = "../../configuration/pyproject.toml"
exclude = ["src/generators/**/templates/**"]

[tool.ruff.lint.per-file-ignores]
"**/*.test.py" = ["S101"]

[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["."]

[tool.pytest.ini_options]
testpaths = ["src"]
pythonpath = ["."]
python_files = ["test_*.py", "*.test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
markers = [
  "unit: fast unit tests with mocked I/O",
  "integration: integration tests requiring real services",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
